[package]
name = "centipede"
version = "0.3.0"
authors = [
    "Omer <omer@kzencorp.com>",
    "Gary <gary@kzencorp.com>"
]
description = "A scheme for instantiating KMS's with recovery"
repository = "https://github.com/ZenGo-X/centipede"
license = "GPL-3.0"
categories = ["cryptography"]
keywords = ["cryptography", "crypto"]

[lib]
crate-type = ["lib"]

[dependencies]
serde_derive = "1.0"
serde = "1.0"
rayon = "1.0.3"
# curv-kzen = { version = "0.9", default-features = false }
# bulletproof-kzen = { version = "1.2", default-features = false }
# curv-kzen = { version = "0.10", default-features = false }
# num-bigint = { version = "0.4", features = ["serde"], optional = true }
curv = { package = "curv-kzen", git="https://github.com/EfficientPrivacyTech/curv.git", rev = "fcb7ac3" }
# curv = { package = "curv-kzen", git="https://github.com/ZenGo-X/curv.git", rev="44537a74", default-features=false, features=["num-bigint"]}
bulletproof = { package = "bulletproof-kzen", path = "https://github.com/EfficientPrivacyTech/bulletproofs", default-features = false }
sha2 = "0.9"
generic-array = "0.14"

[dev-dependencies]
criterion = "0.2"

[features]
default = ["curv/rust-gmp-kzen"]
#default = ["curv/num-bigint"]

[[bench]]
name = "v_backup"
path = "benches/v_backup.rs"
harness = false
